fixing flash message alignment on desktop

--- a/src/components/FlashMessage.scss
+++ b/src/components/FlashMessage.scss
@@ -2,6 +2,7 @@
     width: 100vw;
     position: fixed;
     bottom: 0;
+    left: 0;
     display: flex;
     align-items: center;
     margin: 0;
